--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
-title: BK 4 - Multi Intelligent Space Regeneration Design Team
-subtitle: Hanyang University - Department of Interior Architecture Design
+title: Multi Intelligent (MI) 공간재생디자인 인재양성팀
+subtitle: 한양대학교 실내건축디자인학과
 ---
